# lattice_diffusion

./: .gitmodules  CMakeLists.txt
scripts/: pf  seeder.sh  show_diff.py
src/: config_m.f90  lattice_model.f90  lattice_run.f90  ssa_model_m.f90  ssa_run.f90
